--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,7 +1,11 @@
 <div class="row align-items-center mt-3 mb-3">
   <div class="col-2 d-flex flex-column">
-    <div class="h3 m-0 small">Клиенты</div>
+    <div class="h3 m-0">Клиенты</div>
     <div class="h6 m-0 small">Всего - <%= Client.count%></div>
+    <%=tag.div( class: 'h6 m-0 small') do %>
+      <% info = page_entries_info @clients%>
+      <%= info.gsub('Client','').gsub('клиенты','') %>
+    <%end if @search.present? %>
   </div>
   <%= search_form_for @search, html: {class: 'form-inline col pl-0 pr-0'}  do |f|%>
     <div class="input-group input-group-sm">
@@ -10,6 +14,7 @@
       <%= f.search_field :email_cont_all, placeholder: 'Email', class: "form-control"%>
       <%= f.search_field :phone_cont_all, placeholder: 'Телефон', class: "form-control"%>
       <%= f.select :favorites_client_id_not_null, [['есть',true],['нет',false]], { prompt: 'Избранное'}, class: "form-select" %>
+      <%= f.select :restocks_client_id_not_null, [['есть',true],['нет',false]], { prompt: 'Сообщить о поступлении'}, class: "form-select" %>
       <%= button_tag(type: 'submit', :class => "btn btn-outline-primary") do %><%= search_icon %><% end %>
       <%= link_to arrow_clockwise_icon, clients_path, class: 'btn btn-outline-dark' %>
     </div>
@@ -17,7 +22,7 @@
 
   <div class="col-2 gap-2 d-flex align-items-center justify-content-end">
     <%= link_to upload_cloud_icon, file_import_insales_clients_path, id: 'file_import', title: 'Импорт клиентов Insales', data: {turbo_frame: "modal", turbo_stream: true}, class: 'btn btn-outline-info btn-sm' %>
-    <%= link_to export_file_icon, otchet_clients_path, title: "отчет Избранное", class: "btn btn-outline-info btn-sm", role:"button", data: {turbo_method: :get, turbo_stream: true} if FavoriteSetup.all.present? %>
+    <%= link_to export_file_icon, otchet_clients_path, title: "отчет Избранное", class: "btn btn-outline-info btn-sm", role:"button", data: {turbo_method: :get, turbo_stream: true} if Favorite.count.positive? %>
   </div>
 </div>
 
