--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -34,9 +34,8 @@
     <td><%= user.restock_count %></td>
     <td></td>
     <td></td>
-    <td><%= user.message_setup_status %><br>
-        Действует до:<br> <%= user.message_setup_valid_until %><br>
-        <%= link_to "Add 4 week", add_message_setup_ability_users_path(user), data: {turbo_method: :get, turbo_stream: true}, class: "btn btn-outline-info btn-sm" %>
+    <td><%= user.message_setup_status %> <%= link_to "Add 4 week", add_message_setup_ability_users_path(user), data: {turbo_method: :get, turbo_stream: true}, class: "btn btn-outline-info btn-sm" %><br>
+        Действует до:<br> <%= user.message_setup_valid_until %>
     </td>
     <td><%= link_to trash_icon, user, data: { "turbo-method": :delete, 'turbo-confirm': 'Вы уверенны?' }  if current_admin %></td>
 </tr>
