--- a/app/views/layouts/_user_navigation.html.erb
+++ b/app/views/layouts/_user_navigation.html.erb
@@ -14,6 +14,9 @@
     <a class="dropdown-item <%= 'active' if current_page?(templates_path) %>" href="<%= templates_path %>">Шаблоны</a>
   </div>
 </li>
+<li class="nav-item <%= 'active' if current_page?(discounts_path) %>">
+  <a class="nav-link text-white " href="<%= discounts_path %>">Сценарии скидки</a>
+</li>
 <li class="nav-item dropdown">
   <a class="nav-link text-white  dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">Настройки</a>
   <div class="dropdown-menu">
