--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html class="h-100" id="hotwire-livereload">
   <head <%= Rails.env.development? %>>
     <%= render partial: 'layouts/head' %>
-    <%= render partial: 'layouts/metrics' %>
+    <%= render partial: 'layouts/metrics' unless Rails.env.development? %>
 
     <%= action_cable_meta_tag if Rails.env.development? %>
     <%= hotwire_livereload_tags if Rails.env.development? %>
