--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
     <div class="h6 m-0 small">Всего - <%= User.count%></div>
     <%=tag.div( class: 'h6 m-0 small') do %>
       <% info = page_entries_info @Users%>
-      <%= info.gsub('User','').gsub('пользователи','') %>
+      <%= info %>
     <%end if @search.present? %>
   </div>
   <%= search_form_for @search, {class: 'form-inline col pl-0 pr-0'} do |f| %>
