--- a/app/views/clients/_show.html.erb
+++ b/app/views/clients/_show.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="col-2">
-    <%= link_to reload_icon+" данные из Insales", update_from_insales_path(@client), data: {turbo: false}, class: 'btn btn-outline-primary' if @client.clientid %>
+    <%= link_to reload_icon+" данные из Insales", update_from_insales_client_path(@client), data: {turbo: false}, class: 'btn btn-outline-primary' if @client.clientid %>
   </div>
 </div>
 <% if @favorite_products.present? %>
@@ -45,7 +45,7 @@
           <td></td>
           <td></td>
           <td><%=pr.price%></td>
-          <td>Созд: <%= fav.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
+          <td class='opacity-75 fs-8'>Созд: <%= fav.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
           Обн: <%= fav.updated_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></td>
         </tr>
         <% end %>
@@ -90,7 +90,7 @@
           <td><%= var.quantity %></td>
           <td><%= var.price %></td>
           <td><%= res.status %></td>
-          <td>Созд: <%= res.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
+          <td class='opacity-75 fs-8'>Созд: <%= res.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
           Обн: <%= res.updated_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></td>
         </tr>
         <% end %>
@@ -135,7 +135,7 @@
           <td><%= var.quantity %></td>
           <td><%= var.price %></td>
           <td><%= res.status %></td>
-          <td>Созд: <%= res.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
+          <td class='opacity-75 fs-8'>Созд: <%= res.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
           Обн: <%= res.updated_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></td>
         </tr>
         <% end %>
@@ -180,7 +180,7 @@
           <td><%= var.quantity %></td>
           <td><%= var.price %></td>
           <td><%= res.status %></td>
-          <td>Созд: <%= res.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
+          <td class='opacity-75 fs-8'>Созд: <%= res.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
           Обн: <%= res.updated_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></td>
         </tr>
         <% end %>
