--- a/app/views/discounts/_form.html.erb
+++ b/app/views/discounts/_form.html.erb
@@ -9,6 +9,10 @@
       <%= render 'shared/errors', object: discount %>
       <%=tag.div class: "row py-3" do %>
         <%=tag.div class: "col-12 mb-3" do %>
+          <%= f.label :title, class: "form-label" %>
+          <%= f.text_field :title, class: "form-control px-1" %>
+        <%end%>
+        <%=tag.div class: "col-12 mb-3" do %>
           <%= f.label :rule, class: "form-label" %>
           <% if !@service.work? %>
             <%= f.select :rule, Discount::RULES, {include_blank: true}, {class: "form-select px-1"} %>
