--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -13,7 +13,7 @@
     <% end %>
   </div>
   <%=tag.div class: 'col-6' do %>
-    <%= link_to add_icon, new_discount_path, class: "btn btn-outline-primary btn-sm float-end", data: { turbo_frame: "offcanvas_wrap", turbo_stream: true } %>
+    <%= link_to add_icon, new_discount_path, class: "btn btn-outline-info btn-sm float-end", data: { turbo_frame: "offcanvas_wrap", turbo_stream: true } %>
   <% end %>
 </div>
 
