--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -18,7 +18,7 @@
     <% end %>
   </div>
   <div class="col-2 d-flex justify-content-end">
-    <%= link_to add_icon, new_event_path, class: "btn btn-secondary btn-sm" %>
+    <%= link_to add_icon, new_event_path, class: "btn btn-outline-info btn-sm" %>
   </div>
 </div>
 
