--- a/app/views/discounts/_form.html.erb
+++ b/app/views/discounts/_form.html.erb
@@ -1,48 +1,76 @@
-<%= form_with(model: discount) do |f| %>
-  <%=tag.div(class: 'card') do %>
-
-    <%=tag.div(class: 'card-header') do %>
-      <%=tag.div(class: 'h3') do %><%= f.object.new_record? ? 'Создать' : 'Редактировать'%><%end%>
-    <% end %>
-
-    <%= tag.div(class: 'card-body py-0') do %>
-      <%= render 'shared/errors', object: discount %>
-      <%= tag.div class: "row py-3" do %>
-        <%= tag.div class: "col-12 mb-3" do %>
-          <%= f.label :title, class: "form-label" %>
-          <%= f.text_field :title, class: "form-control px-1" %>
-        <% end %>
-        <%=tag.div class: "col-12 mb-3" do %>
-          <%= f.label :rule, class: "form-label" %>
-          <% if !@service.work? %>
-            <%= f.select :rule, Discount::RULES, {include_blank: true}, {class: "form-select px-1"} %>
-          <% else %>
-            <%= f.text_area :rule, class: "form-control px-1" , rows: 10 %>
-          <% end %>
-        <%end%>
-        <%=tag.div class: "col-4 mb-3" do %> 
-          <%= f.label :move, class: "form-label" %>
-          <%= f.select :move, [['-','minus'],['+','plus']], {include_blank: false}, {class: "form-select px-1"} %>
-        <%end%>
-        <%=tag.div class: "col-4 mb-3" do %> 
-          <%= f.label :shift, class: "form-label" %>
-          <%= f.text_field :shift, {type: "number", class: "form-control px-1", min: "0"} %>
-        <%end%>
-        <%=tag.div class: "col-4 mb-3" do %> 
-          <%= f.label :points, class: "form-label" %>
-          <%= f.select :points, [['%','percent'], ['ед.','money']], {include_blank: false}, {class: "form-select px-1"} %>
-        <%end%>
-        <%=tag.div class: "col-12 mb-3" do %>
-          <%= f.label :notice, class: "form-label" %>
-          <%= f.text_field :notice, class: "form-control px-1" %>
-        <%end%>
-      <%end%>
-
-      <%=tag.div(class: "my-3 col-12 d-flex justify-content-end gap-2 align-items-center") do %>
-        <%= f.submit t('save'), class: "btn btn-primary" %>
-      <%end %> 
-
-    <% end %>
-
+<% tablists = [{handle: 'home',title: 'Основное'}, {handle: 'profile',title: 'Помощь'}, {handle: 'messages',title: 'Пример данных'}]%>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+  <% tablists.each_with_index do |tab, index| %>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link <% if index.zero? %>active<% end %>" id="<%= tab[:handle] %>-tab" data-bs-toggle="tab" data-bs-target="#<%= tab[:handle] %>" type="button" role="tab" aria-controls="<%= tab[:handle] %>" aria-selected="true">
+      <%= tab[:title] %>
+    </button>
+  </li>
   <%end%>
-<%end %>
+</ul>
+<div class="tab-content pt-3">
+  <div  class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
+     <%= form_with(model: discount) do |f| %>
+      <%=tag.div(class: 'card') do %>
+        <%=tag.div(class: 'card-header bg-transparent') do %>
+          <%=tag.div(class: 'h3') do %><%= f.object.new_record? ? 'Создать' : 'Редактировать'%><%end%>
+        <% end %>
+
+        <%= tag.div(class: 'card-body py-0 bg-transparent') do %>
+          <%= render 'shared/errors', object: discount %>
+          <%= tag.div class: "row py-3" do %>
+            <%= tag.div class: "col-12 mb-3" do %>
+              <%= f.label :title, class: "form-label" %>
+              <%= f.text_field :title, class: "form-control px-1" %>
+            <% end %>
+            <%=tag.div class: "col-12 mb-3" do %>
+              <%= f.label :rule, class: "form-label" %>
+              <%= f.text_area :rule, class: "form-control px-1" , rows: 10, placeholder: 'check insales API setup and work' %>
+            <%end%>
+            <%=tag.div class: "col-4 mb-3" do %> 
+              <%= f.label :move, class: "form-label" %>
+              <%= f.select :move, [['-','minus'],['+','plus']], {include_blank: false}, {class: "form-select px-1"} %>
+            <%end%>
+            <%=tag.div class: "col-4 mb-3" do %> 
+              <%= f.label :shift, class: "form-label" %>
+              <%= f.text_field :shift, {type: "number", class: "form-control px-1", min: "0"} %>
+            <%end%>
+            <%=tag.div class: "col-4 mb-3" do %> 
+              <%= f.label :points, class: "form-label" %>
+              <%= f.select :points, [['%','percent'], ['ед.','money']], {include_blank: false}, {class: "form-select px-1"} %>
+            <%end%>
+            <%=tag.div class: "col-12 mb-3" do %>
+              <%= f.label :notice, class: "form-label" %>
+              <%= f.text_field :notice, class: "form-control px-1" %>
+            <%end%>
+          <%end%>
+
+          <%=tag.div(class: "my-3 col-12 d-flex justify-content-end gap-2 align-items-center") do %>
+            <%= f.submit t('save'), class: "btn btn-primary" %>
+          <%end %> 
+
+        <% end %>
+
+      <%end%>
+    <%end %> 
+  </div>
+  <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+    <p>В результате проверок всех условий должна остаться фраза - do_work. Она должна присутствовать один раз в коде liquid.</p>
+    <p>discount.items - это "order_lines" из примера данных</p>
+    <p>Примеры правил:</p>
+     <code><pre>{% if discount.items.size == 2 %}do_work{% else %}false{% endif %}</pre></code> 
+     <code><pre>{% if discount.items.size == 3 %}do_work{% else %}false{% endif %}</pre></code>
+     <code><pre>
+{% assign muj_coll_array = '' | split: '' %}
+{% for item in discount.items %}
+  {% if item.collections_titlies contains 'Мужская одежда' %}
+    {% assign muj_coll_array = 'true' | slice: forloop.index0 | concat: muj_coll_array %}
+  {% endif %}
+{% endfor %}
+{% if discount.items.size == muj_coll_array.size %}do_work{% endif %}</pre></code>
+  </div>
+    <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab">
+      <%= render 'code_example' %>
+  </div>
+</div>
+
