--- a/app/views/mycases/_mycase.html.erb
+++ b/app/views/mycases/_mycase.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tag dom_id(mycase, Apartment::Tenant.current), class: "d-flex list-group-item py-2 border-start-0 border-end-0 row justify-content-start align-items-center px-0" do %>
     <%= tag.div class: "col-1 d-flex flex-column" do %>
         <%=tag.div class: 'form-check' do %>
-            <%= check_box_tag "mycase_ids[]", mycase.id, false, {class: 'checkboxes form-check-input', data: { 'select-all_target': 'checkbox', action: "change->selectall#toggleParent"}, form: :bulk_form } %>
+            <%= check_box_tag "mycase_ids[]", mycase.id, false, {class: 'checkboxes form-check-input', data: { 'select-all_target': 'checkbox', action: "change->selectall#toggleParent"}, form: :bulk_action_form } %>
             <%=tag.label class: 'form-check-label' do %><%= tag.b( mycase.id ) %><% end %>
         <% end %>
         <%=tag.div( mycase.created_at.strftime('%d/%m/%Y %H:%M'), class: "fs-8") %>
@@ -19,7 +19,7 @@
     <%= tag.div class: "col-1 d-flex flex-column" do %>
         <%= mycase.lines_sum %>
     <% end %>
-    <div class= "col-1 d-flex justify-content-end gap-2 align-items-center" id="buttons-<%=mycase.id%>">
+    <div class= "col-1 d-flex justify-content-end gap-3 align-items-center" id="buttons-<%=mycase.id%>">
         <%= link_to edit_icon, edit_mycase_path(mycase), class: '', data: {turbo_frame: "_top"} %>
         <%= link_to trash_icon, mycase, data: { "turbo-method": :delete, 'turbo-confirm': 'Are you sure?' }, class:"" %>
     </div>
