--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,8 +1,10 @@
 <%= turbo_frame_tag dom_id(product, Apartment::Tenant.current), class: "d-flex list-group-item py-0 border-start-0 border-end-0 row justify-content-start align-items-center px-0" do %>
-    <div class="col-1 d-flex flex-column">
-        <%=tag.div product.id %>
-        <%=tag.div( product.insid, class: 'opacity-75 fs-8') if product.insid %>
-    </div>
+    <%= tag.div class: "col-1 d-flex flex-column" do %>
+        <%=tag.div class: 'form-check' do %>
+            <%= check_box_tag "product_ids[]", product.id, false, {class: 'checkboxes form-check-input', data: { 'select-all_target': 'checkbox', action: "change->selectall#toggleParent"}, form: :bulk_action_form } %>
+            <%=tag.div( product.insid, class: 'opacity-75 fs-8') if product.insid %>
+        <% end %>
+    <% end %>
     <%=tag.div( product.created_at.strftime('%d/%m/%Y %H:%M'), class: "col-1 fs-8") %>
 
     <%=tag.div class: 'col-1 p-0' do %>
