--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -12,7 +12,7 @@
     <% end %>
   </div>
   <div class="col-2 d-flex justify-content-end">
-    <%= link_to add_icon, new_template_path, class: "btn btn-secondary btn-sm" %>
+    <%= link_to add_icon, new_template_path, class: "btn btn-outline-info btn-sm" %>
   </div>
 </div>
 
