--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -21,7 +21,7 @@
   <div class="col-2 gap-2 d-flex align-items-center justify-content-end">
     <%= form_with url: csv_export_clients_path, method: :post, id: :bulk_action_form , class: '' do |f| %>
       <%# f.button "#{button_print} CSV" , type: :submit, class: "btn btn-outline-primary" %>
-      <%= render 'shared/bulk_delete_buttons', f: f, object: Product.new %>
+      <%= render 'shared/bulk_delete_buttons', f: f, object: Client.new %>
     <% end %>
     <%= link_to upload_cloud_icon, file_import_insales_clients_path, id: 'file_import', title: 'Импорт клиентов Insales', data: {turbo_frame: "modal", turbo_stream: true}, class: 'btn btn-outline-info btn-sm' %>
     <%= link_to export_file_icon, otchet_clients_path, title: "отчет Избранное", class: "btn btn-outline-info btn-sm", role:"button", data: {turbo_method: :get, turbo_stream: true} if Favorite.count.positive? %>
