--- a/app/views/dashboard/services.html.erb
+++ b/app/views/dashboard/services.html.erb
@@ -132,7 +132,7 @@ data-favorite-product="{{ product.id }}"</pre>
     </div>
   </div>
 </div>
-<div class="card-group gap-3 w-50">
+<div class="card-group gap-3">
   <div class="card">
     <div class="card-header">
       <div class="h4 card-title">Заказы <small>(order)</small></div>
@@ -153,5 +153,24 @@ data-favorite-product="{{ product.id }}"</pre>
       </div>
     </div>
   </div>
+  <div class="card">
+    <div class="card-header">
+      <div class="h4 card-title">Сценарии скидок</small></div>
+    </div>
+    <div class="card-body">
+      <div class="card-text">
+        <ul>
+          <li>включить Внешние скидки - Скидки - Внешние скидки (дополнительные поля не обрабатываем) - включить все галки</li>
+          <li>используем url - https://myappda.ru/insints/discount</li>
+          <li>настраиваем сценарии по вашим условиям используя liquid (<a href="https://liquidjs.com/playground.html" target="_blank">песочница</a>)</li>
+        </ul>
+      </div>
+    </div>
+    <div class="card-footer">
+      <div class="f-flex flex-between">
+        <label>Состояние:</label>
+        <span>вкл/выкл</span>
+      </div>
+    </div>
+  </div>
 </div>
-
