--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -6,7 +6,7 @@
   <div class="col-4 pl-0 pr-0 row">
     <%= search_form_for @search, {class: 'form-inline col-12 pl-0 pr-0'} do |f| %>
       <div class="input-group input-group-sm">
-        <%= f.search_field :rule_cont , placeholder: 'правило', class: "form-control"%>
+        <%= f.search_field :title_cont , placeholder: 'Название', class: "form-control"%>
         <%= button_tag(type: 'submit', :class => "btn btn-outline-primary") do %><%= search_icon %><% end %>
         <%= link_to arrow_clockwise_icon, discounts_path, class: 'btn btn-outline-dark' %>
       </div>
