--- a/app/views/layouts/_nav_not_for_sign_in.html.erb
+++ b/app/views/layouts/_nav_not_for_sign_in.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light px-1 px-md-0 py-3 py-lg-0 w-100">
+<nav class="navbar navbar-expand-lg px-1 px-md-0 py-3 py-lg-0 w-100" style="border-bottom: 1px solid #eee;">
     <div class="header-wrap container-fluid px-4 d-flex align-items-center py-0">
         <a href="http://myappda.ru" class="navbar-brand p-0 m-0">
             <%= image_tag "new_logo_myappda.svg", data: {src: "new_logo_myappda.svg", title: 'MyAppDa'}, class: 'logo logo_white w-100' %>
@@ -17,11 +17,12 @@
                         <a href="/message" class="dropdown-item">Триггеры</a>
                         <a href="/preorder" class="dropdown-item">Предзаказ</a>
                         <a href="/abandoned_cart" class="dropdown-item">Брошенная корзина</a>
+                        <a href="/discount" class="dropdown-item">Сценарии скидок</a>
                     </div>
                 </div>
                 <a href="/documents" class="nav-item nav-link">Помощь</a>
             </div>
-            <%= link_to t('log_in'), new_session_path('user'), class: 'btn btn-light border border-primary rounded-pill text-primary py-2 px-4 me-4' %>
+            <%= link_to t('log_in'), new_session_path('user'), class: 'btn btn-light border border-primary rounded-pill text-primary py-2 px-4 mx-4' %>
             <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-primary rounded-pill text-white py-2 px-4' %>
         </div>
     </div>
