--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -31,7 +31,7 @@
         </div>
         <div class="col-3 col-md d-none d-md-block">
           <h5>Меню</h5>
-          <% menu_array = [['#about-app','О приложении'],['favorite','Избранные товары'],['restock','Собщить о поступлении'],['message','Триггеры'],['documents','Настройка'],['oferta','Оферта']]%>
+          <% menu_array = [['#about-app','О приложении'],['favorite','Избранные товары'],['restock','Собщить о поступлении'],['message','Триггеры'],['documents','Настройка'],['oferta','Оферта'],['disc','Сценарии скидок']]%>
           <ul class="list-unstyled text-small">
             <% menu_array.each do |link, text|%>
             <li>
