--- a/app/views/layouts/_nav_not_for_sign_in.html.erb
+++ b/app/views/layouts/_nav_not_for_sign_in.html.erb
@@ -17,7 +17,7 @@
                         <a href="/message" class="dropdown-item">Триггеры</a>
                         <a href="/preorder" class="dropdown-item">Предзаказ</a>
                         <a href="/abandoned_cart" class="dropdown-item">Брошенная корзина</a>
-                        <a href="/discount" class="dropdown-item">Сценарии скидок</a>
+                        <a href="/disc" class="dropdown-item">Сценарии скидок</a>
                     </div>
                 </div>
                 <a href="/documents" class="nav-item nav-link">Помощь</a>
