--- a/app/views/mycases/_mycase.html.erb
+++ b/app/views/mycases/_mycase.html.erb
@@ -21,6 +21,6 @@
     <% end %>
     <div class= "col-1 d-flex justify-content-end gap-3 align-items-center" id="buttons-<%=mycase.id%>">
         <%= link_to edit_icon, edit_mycase_path(mycase), class: '', data: {turbo_frame: "_top"} %>
-        <%= link_to trash_icon, mycase, data: { "turbo-method": :delete, 'turbo-confirm': 'Are you sure?' }, class:"" %>
+        <%= link_to trash_icon, mycase, data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: "" %>
     </div>
 <% end %>
