--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,9 +3,8 @@
     <div class="h4">Пользователи</div>
     <div class="h6 m-0 small">Всего - <%= User.count%></div>
     <%=tag.div( class: 'h6 m-0 small') do %>
-      <% info = page_entries_info @Users%>
-      <%= info %>
-    <%end if @search.present? %>
+      <%= page_entries_info(@users).to_s.gsub('User','').gsub('пользователи','').html_safe %>
+    <%end %>
   </div>
   <%= search_form_for @search, {class: 'form-inline col pl-0 pr-0'} do |f| %>
     <div class="input-group input-group-sm">
